<?xml version="1.0"?>
<package>
  <name>rosserial_server</name>
  <version>0.8.0</version>
  <description>
    A more performance- and stability-oriented server alternative implemented
    in C++ to rosserial_python.
  </description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>topic_tools</run_depend>

  <build_depend>cuckoo_time_translator</build_depend>
  <run_depend>cuckoo_time_translator</run_depend>
  <build_depend>fm_comm</build_depend>
  <run_depend>fm_comm</run_depend>
</package>
